<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_title"
        android:textSize="20sp"
        android:layout_marginBottom="10dp"
        android:textColor="@android:color/black"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/sistema"
        android:layout_marginBottom="10dp"
        />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:background="@android:color/black"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tview_pteoria"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:text="@string/app_pteoria"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:id="@+id/tview_prom-teoria"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:text="@string/app_prom"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:id="@+id/tview_p1teoria"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_below="@+id/tview_pteoria"
            android:text="Práctica 1"
            android:padding="10dp"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:id="@+id/etext_pt1"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textSize="18sp"
            android:inputType="number"
            android:layout_below="@+id/tview_prom-teoria"
            android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/tview_p2teoria"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_below="@+id/tview_p1teoria"
            android:text="Práctica 2"
            android:padding="10dp"
            android:layout_marginBottom="2dp"/>

        <EditText
            android:id="@+id/etext_pt2"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textSize="18sp"
            android:inputType="number"
            android:layout_below="@+id/etext_pt1"
            android:layout_marginBottom="2dp" />

    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="5dp"
        android:background="@android:color/black"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/tview_plab"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:text="@string/app_plab"
            android:textColor="@android:color/black"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:id="@+id/tview_prom-lab"
            android:layout_width="100sp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:text="@string/app_prom"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:id="@+id/tview_p1lab"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_below="@+id/tview_plab"
            android:text="Práctica 1"
            android:padding="10dp"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:id="@+id/etext_plab1"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textSize="18sp"
            android:inputType="number"
            android:layout_below="@+id/tview_prom-lab"
            android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/tview_p2lab"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_below="@+id/tview_p1lab"
            android:text="Práctica 2"
            android:padding="10dp"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:id="@+id/etext_plab2"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etext_plab1"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="4dp"
            android:inputType="number"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tview_p3lab"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_below="@+id/tview_p2lab"
            android:text="Práctica 3"
            android:padding="10dp"
            android:layout_marginBottom="4dp"/>

        <EditText
            android:id="@+id/etext_plab3"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textSize="18sp"
            android:layout_below="@+id/etext_plab2"
            android:inputType="number"
            android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/tview_p4lab"
            android:layout_width="200sp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_below="@+id/tview_p3lab"
            android:text="Práctica 4"
            android:padding="10dp"
            android:layout_marginBottom="2dp"/>

        <EditText
            android:id="@+id/etext_plab4"
            android:layout_width="80sp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textSize="18sp"
            android:layout_below="@+id/etext_plab3"
            android:inputType="number"
            android:layout_marginBottom="2dp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tview_promediofinal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="6dp"
        android:text="@string/app_tviewpromedio"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tview_condicion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_green_light"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_marginBottom="2dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_btncalc"
        android:onClick="Calcular"
        android:background="@color/colorAccent"/>


</LinearLayout>